--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "encrypter-js": "^1.0.0",
     "express": "^4.16.4",
+    "fake_credit_card": "^1.0.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.9.0"
