--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -16,10 +15,11 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start":"node ../server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
@@ -30,32 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
-=======
-  "name": "mern-auth",
-  "version": "1.0.0",
-  "description": "Mern Auth Example",
-  "main": "server.js",
-  "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "author": "Lawrence",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
-    "express": "^4.16.4",
-    "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.11",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "validator": "^10.9.0"
-  }
->>>>>>> e5a97972fa5a04b725b25949763101004367fb6d
+  ],
+  "engines": {
+    "node": "14.15.0"
+}
 }
