--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "cors": "^2.8.5",
     "encrypter-js": "^1.0.0",
     "express": "^4.16.4",
     "fake_credit_card": "^1.0.1",
